fix grid on small screens

--- a/src/styles/components/user/top_items/top_item_grid.module.sass
+++ b/src/styles/components/user/top_items/top_item_grid.module.sass
@@ -3,6 +3,9 @@
 .container
   display: grid
   grid-template-columns: repeat(5, 1fr)
+  grid-template-rows: repeat(2, 1fr)
+  grid-auto-rows: 0
+  overflow-y: hidden 
 
   .item
     position: relative
@@ -43,3 +46,16 @@
     &:hover .info
       bottom: 0
       transform: translateY(0)
+
+@media (max-width: 800px)
+  .container
+    grid-template-columns: repeat(4, 1fr)
+
+@media (max-width: 650px)
+  .container
+    grid-template-columns: repeat(3, 1fr)
+
+@media (max-width: 500px)
+  .container
+    grid-template-columns: repeat(2, 1fr)
+    grid-template-rows: repeat(3, 1fr)
